# learn-pqxx-lib

./: CMakeLists.txt  README.md  conanfile.txt
src/: app.h  console_handler.h  database.h  libpqxx_boost_uuid.h  main.cpp  model.h  properties.h  user_commands.h
